--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "vitest": "^3.2.4"
   },
   "dependencies": {
-    "date-fns": "^2.30.0",
     "@supabase/supabase-js": "^2.45.4",
     "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
     "express": "^5.1.0",
     "firebase": "^10.12.2",
     "firebase-admin": "^13.5.0",
+    "jose": "^6.1.0",
     "pino": "^9.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
